cmt 20 [19/06]
Avance en actualizacion de lotes. Grabado de datos en base. Falta controlar transacciones que no estan pendientes.
Se cambia manejo de errores desde persistencia hasta presentacion, por el momento serán mostradas en un joptionpane como error (ver si cambiar). Hay que ver de capturar otras excep en los ctrl para mostrar en caso de que caiga. Se genera frm y ctrl de pedido para iniciar los mismos.
*Otros arreglos menores.